tests/snapshots/execution_spec__cors-allow-cred-vary.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-credentials": "true",
    "access-control-expose-headers": "",
    "content-type": "application/json",
    "vary": "origin, access-control-request-method, access-control-request-headers"
  },
  "body": {
    "data": {
      "val": 1
    }
  }
}
