tests/snapshots/execution_spec__cors-invalid-origins.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Invalid CORS configuration: Cannot combine `Access-Control-Allow-Credentials: true` with `Access-Control-Allow-Origin: *`",
    "trace": [],
    "description": null
  }
]
