tests/snapshots/execution_spec__cors-invalid-origins.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(headers: {corsParams: {allowCredentials: true, allowHeaders: null, allowMethods: null, allowOrigins: ["*"], allowPrivateNetwork: false, exposeHeaders: [], maxAge: null, vary: ["origin", "access-control-request-method", "access-control-request-headers"]}}) @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type Query {
  val: Int @const(data: 1)
}
