tests/snapshots/execution_spec__cors-non-access-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(responseHeaders: [{key: "Access-Control-Allow-Headers", value: "*"}, {key: "Access-Control-Allow-Methods", value: "POST, GET, OPTIONS"}, {key: "Access-Control-Allow-Origin", value: "*"}, {key: "Authorization", value: "josaijdfopisjdopfi"}, {key: "Content-Length", value: "2938453"}, {key: "Content-Type", value: "application/json"}]) @upstream {
  query: Query
}

type Query {
  value: Int @const(data: 1)
}
