tests/snapshots/execution_spec__cors.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  value: Int!
}

schema {
  query: Query
}
