tests/snapshots/execution_spec__cors.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(headers: {corsParams: {allowCredentials: false, allowHeaders: null, allowMethods: null, allowOrigin: [], allowPrivateNetwork: false, exposeHeaders: [], maxAge: null, vary: ["origin", "access-control-request-method", "access-control-request-headers"]}}) @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type Query {
  val: Int @const(data: 1)
}
