tests/snapshots/execution_spec__custom-headers.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "x-name": "John Doe",
    "x-id": "1"
  },
  "body": {
    "data": {
      "greet": "Hello World!"
    }
  }
}
