tests/snapshots/execution_spec__custom-headers.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  greet: String
}

scalar Url

schema {
  query: Query
}
